--- a/src/entities/Content/Content.module.scss
+++ b/src/entities/Content/Content.module.scss
@@ -1,3 +1,5 @@
+@import '../../shared/styles/base/mixins';
+
 .content {
   display: flex;
   justify-content: space-between;
@@ -7,9 +9,14 @@
   margin-bottom: 80px;
   background-color: var(--bg-content);
 
+  @include mobile {
+    flex-direction: column;
+    align-items: center;
+  }
+
   &-img {
-    width: 284px;
-    height: 282px;
-    object-fit: cover;
+    @include mobile {
+      order: -2;
+    }
   }
 }
