--- a/src/shared/ui/Input/Checkbox/Checkbox.module.scss
+++ b/src/shared/ui/Input/Checkbox/Checkbox.module.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/base/mixins';
+
 .checkbox {
   display: flex;
   align-items: center;
@@ -7,6 +9,12 @@
     display: flex;
     align-items: center;
     gap: 8px;
+
+    &-text-page {
+      @include mobile() {
+        font-size: clamp(12px, 6px + 1.46vw, 18px);
+      }
+    }
 
     &::before {
       content: '';
