--- a/src/shared/ui/Input/InputText/InputText.module.scss
+++ b/src/shared/ui/Input/InputText/InputText.module.scss
@@ -1,5 +1,6 @@
 .input[type='text'] {
-  width: 386px;
+  max-width: 386px;
+  width: 100%;
   padding: 16px 14px;
   border: 1px solid var(--border-primary);
   background-color: var(--btn-bg-secondary);
