--- a/src/widgets/ResultWidget/ResultWidget.module.scss
+++ b/src/widgets/ResultWidget/ResultWidget.module.scss
@@ -1,9 +1,15 @@
+@import '../../shared/styles/base/mixins';
+
 .container {
   display: flex;
   flex-direction: column;
   max-width: 844px;
   width: 100%;
   height: 300px;
+
+  @include mobile() {
+    height: auto;
+  }
 
   &-title {
     margin-bottom: 16px;
