--- a/src/app/Home.module.scss
+++ b/src/app/Home.module.scss
@@ -4,7 +4,8 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
-  width: 811px;
+  max-width: 811px;
+  width: 100%;
   margin-bottom: 48px;
 
   @include mobile {
